--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <nav class="navbar">
         <ul>
           <li><a href="#">Home</a></li>
-          <li><a href="#">About us</a></li>
+          <li><a href="#">Sobre Nós</a></li>
           <li><a href="#">Posts</a></li>
         </ul>
       </nav>
@@ -22,12 +22,12 @@
 
     <main>
       <section class="modalHolder" id="modal">
-        <dialog class="modalHandler" id="modalContentId">
+        <dialog class="modalContent" id="modalContentId">
 
           <figure class="left">
             <img
               class="postImg"
-              src="https://cdn.corporate.walmart.com/dims4/WMT/f7a8313/2147483647/strip/true/crop/1920x1080+0+0/resize/1200x675!/quality/90/?url=https%3A%2F%2Fcdn.corporate.walmart.com%2F7b%2F66%2F142c151b4cd3a19c13e1ca65f193%2Fbusinessfornature-banner.png"
+              src="https://cdn.corporate.walmart.com/dims4/WMT/f7a8313/2147483647/strip/true/crop/1920x1080+0+0/resize/1200x675!/quality/90/?url=https%3A%2F%2Fcdn.corporate.walmart.com%2F7b%2F66%2F142c151b4cd3a19c13e1ca65f193%2Fbusinessfornature-banner.png""
               alt=""
             />
 
@@ -43,57 +43,18 @@
                 voluptatibus alias eligendi.
               </p>
             </article>
-            <ul class="comments">
-              <li class="commentCard">
-                <p>
-                  <strong>email:</strong>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi et
-                  unde totam dignissimos dolore vitae, autem non nostrum, corrupti
-                  praesentium nesciunt eius, labore maiores? Soluta illum reiciendis
-                  eum? Voluptate, suscipit.
-                </p>
-              </li>
-              <li class="commentCard">
-                <p>
-                  <strong>email:</strong>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi et
-                  unde totam dignissimos dolore vitae, autem non nostrum, corrupti
-                  praesentium nesciunt eius, labore maiores? Soluta illum reiciendis
-                  eum? Voluptate, suscipit.
-                </p>
-              </li>
-              <li class="commentCard">
-                <p>
-                  <strong>email:</strong>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi et
-                  unde totam dignissimos dolore vitae, autem non nostrum, corrupti
-                  praesentium nesciunt eius, labore maiores? Soluta illum reiciendis
-                  eum? Voluptate, suscipit.
-                </p>
-              </li>
-              <li class="commentCard">
-                <p>
-                  <strong>email:</strong>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi et
-                  unde totam dignissimos dolore vitae, autem non nostrum, corrupti
-                  praesentium nesciunt eius, labore maiores? Soluta illum reiciendis
-                  eum? Voluptate, suscipit.
-                </p>
-              </li>
-              <li class="commentCard">
-                <p>
-                  <strong>email:</strong>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi et
-                  unde totam dignissimos dolore vitae, autem non nostrum, corrupti
-                  praesentium nesciunt eius, labore maiores? Soluta illum reiciendis
-                  eum? Voluptate, suscipit.
-                </p>
-              </li>
+            <ul class="comments" id="commentContentHolder">
+            </ul> 
             </section>
           </section>
         </dialog>
       </section>
     </main>
+    <footer>
+      <div class="container">
+        <p>&copy; 2023 Todos os direitos reservados</p>
+      </div>
+    </footer>
    
   </body>
 </html>
